fix log overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -122,3 +122,36 @@ nav a {
 a:hover {
     color: darkgreen;
 }
+.modal {
+    display: none; 
+    position: absolute; 
+    z-index: 5;
+    left: 200px;
+    top: 200px;
+    width: 75%;
+    height: 75%; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(89, 207, 89, 0.671);
+  }
+    .modal-content {
+    background-color: rgba(89, 207, 89, 0.671);
+    font-family: 'Barriecito', cursive;
+    font-size: 45px;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+  }
+    .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
